# ChatDevApp

./: .gitignore  README.md  api_client.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
utils/: constants.py  storage.py
views/: app_generator.py  app_list.py  settings.py
