[tool.poetry]
name = "chatdevapp"
version = "0.1.0"
description = ""
authors = ["QianFuv <qianfuv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.26.0"

[tool.flet.android]
split_per_abi = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"